5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1672_1952.log
== TEST (2019-04-26 18:43:47) 
-- CODE:
SB = float(input("Salariio bruto: "))
# Desconto da contribuicao previdenciaria
if (SB == 1.659,38 )
-- ERROR:
File "XXXX", line 3
    if (SB == 1.659,38 )
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 18:44:03) 
-- CODE:
SB = float(input("Salariio bruto: "))
# Desconto da contribuicao previdenciaria
if (SB == 1.659,38):
	print ("sim")
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 18:45:11) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB == 1.659.38):
	print ("sim")
-- ERROR:
File "XXXX", line 3
    if (SB == 1.659.38):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 18:45:24) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB == 1.659.38):
	print ("sim")
-- ERROR:
File "XXXX", line 3
    if (SB == 1.659.38):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 18:46:22) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB == 1.659.38):
	print ("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 3
    if (SB == 1.659.38):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 18:46:31) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB == 1.659):
	print ("sim")
else:
	print("nao")
-- OUTPUT:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 18:46:46) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB == 1.659,38):
	print ("sim")
else:
	print("nao")
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 18:47:07) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB == 1.659.38):
	print ("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 3
    if (SB == 1.659.38):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:00:07) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB == 1659.38):
	print ("sim")
else:
	print("nao")
-- OUTPUT:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:38:28) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB <= 1659.38):
	Sb = SB - (SB * 8/100)
	print(round("Salario liquido = ", Sb, 2))
elif (SB > 1659.38) and(SB <= 2765.66):
	Sb = SB - (SB * 9/100)
	if(Sb == 1903.98):
		print(round("Salario liquido = ", Sb, 2))
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("Salario liquido = ", Sb, 2))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:46:00) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB <= 1659.38):
	Sb = SB - (SB * 8/100)
	print(round("Salario liquido = ", Sb, 2))
elif (SB > 1659.38) and(SB <= 2765.66):
	Sb = SB - (SB * 9/100)
	if(Sb <= 1903.98):
		print(round("Salario liquido = ", Sb, 2))
	else:
		Sl = Sb - (Sb * 7.5/100)
		print(round("Salario liquido = ", Sl, 2))
		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("Salario liquido = ", Sb, 2))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:49:04) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB <= 1659.38):
	Sb = SB - (SB * 8/100)
	print(round("Salario liquido = R$", Sb, 2))
elif (SB >= 1659.39) and(SB <= 2765.66):
	Sb = SB - (SB * 9/100)
	if (Sb <= 1903.98):
		print(round("Salario liquido = R$", Sb, 2))
	else:
		Sl = Sb - (Sb * 7.5/100)
		print(round("Salario liquido = R$", Sl, 2))
elif (SB >= 2765.67) and (SB <= 5531.31):
	Sb = SB - (SB * 11/100)
	if ()
		
	
	
-- ERROR:
File "XXXX", line 15
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:11:59) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB <= 1659.38):
	Sb = SB - (SB * 8/100)
	print(round("Salario liquido = R$", Sb, 2))
elif (SB >= 1659.39) and(SB <= 2765.66):
	Sb = SB - (SB * 9/100)
	if (Sb <= 1903.98):
		print(round("Salario liquido = R$", Sb, 2))
	else:
		Sl = Sb - (Sb * 7.5/100)
		print(round("Salario liquido = R$", Sl, 2))
elif (SB >= 2765.67) and (SB <= 5531.31):
	Sb = SB - (SB * 11/100)
	if (Sb <= 2826.65):
		Sl = Sb - (Sb * 7.5/100)
		print(round("Salario liquido = R$", Sl, 2))
	elif (Sb >= 2826.66) and (Sb <= 3751.05): 
		Sl = Sb - (Sb * 15/100)
		print(round("Salario liquido = R$", Sl, 2))
	elif (Sb >= 3751.06) and (Sb <= 4664.68):
		Sl = Sb - (Sb * 22.5/100)
		print(round("Salario liquido = R$", Sl, 2))
	else:
		Sl = Sb - (Sb * 27.5/100)
		print(round("Salario liquido = R$", Sl, 2))
else:
	Sl = SB - 608.44
	print(round("Salario liquido = R$", Sl, 2))
	
		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("Salario liquido = R$", Sb, 2))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:14:25) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
print("Salario liquido = R$", round(Sl, 2))
if (SB <= 1659.38):
	Sb = SB - (SB * 8/100)
	print("Salario liquido = R$", round(Sb, 2))
elif (SB >= 1659.39) and(SB <= 2765.66):
	Sb = SB - (SB * 9/100)
	if (Sb <= 1903.98):
		print("Salario liquido = R$", round(Sb, 2))
	else:
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
elif (SB >= 2765.67) and (SB <= 5531.31):
	Sb = SB - (SB * 11/100)
	if (Sb <= 2826.65):
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 2826.66) and (Sb <= 3751.05): 
		Sl = Sb - (Sb * 15/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 3751.06) and (Sb <= 4664.68):
		Sl = Sb - (Sb * 22.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	else:
		Sl = Sb - (Sb * 27.5/100)
		print("Salario liquido = R$", round(Sl, 2))
else:
	Sl = SB - 608.44
	print("Salario liquido = R$", round(Sl, 2))
	
		
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("Salario liquido = R$", round(Sl, 2))
NameError: name 'Sl' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:14:53) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB <= 1659.38):
	Sb = SB - (SB * 8/100)
	print("Salario liquido = R$", round(Sb, 2))
elif (SB >= 1659.39) and(SB <= 2765.66):
	Sb = SB - (SB * 9/100)
	if (Sb <= 1903.98):
		print("Salario liquido = R$", round(Sb, 2))
	else:
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
elif (SB >= 2765.67) and (SB <= 5531.31):
	Sb = SB - (SB * 11/100)
	if (Sb <= 2826.65):
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 2826.66) and (Sb <= 3751.05): 
		Sl = Sb - (Sb * 15/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 3751.06) and (Sb <= 4664.68):
		Sl = Sb - (Sb * 22.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	else:
		Sl = Sb - (Sb * 27.5/100)
		print("Salario liquido = R$", round(Sl, 2))
else:
	Sl = SB - 608.44
	print("Salario liquido = R$", round(Sl, 2))
	
		
		
	
	
-- OUTPUT:
Salario liquido = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:15:02) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB <= 1659.38):
	Sb = SB - (SB * 8/100)
	print("Salario liquido = R$", round(Sb, 2))
elif (SB >= 1659.39) and(SB <= 2765.66):
	Sb = SB - (SB * 9/100)
	if (Sb <= 1903.98):
		print("Salario liquido = R$", round(Sb, 2))
	else:
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
elif (SB >= 2765.67) and (SB <= 5531.31):
	Sb = SB - (SB * 11/100)
	if (Sb <= 2826.65):
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 2826.66) and (Sb <= 3751.05): 
		Sl = Sb - (Sb * 15/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 3751.06) and (Sb <= 4664.68):
		Sl = Sb - (Sb * 22.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	else:
		Sl = Sb - (Sb * 27.5/100)
		print("Salario liquido = R$", round(Sl, 2))
else:
	Sl = SB - 608.44
	print("Salario liquido = R$", round(Sl, 2))
	
		
		
	
	
-- EXECUTION TIME:
0.178921
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$ 4926.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:15:06) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB <= 1659.38):
	Sb = SB - (SB * 8/100)
	print("Salario liquido = R$", round(Sb, 2))
elif (SB >= 1659.39) and(SB <= 2765.66):
	Sb = SB - (SB * 9/100)
	if (Sb <= 1903.98):
		print("Salario liquido = R$", round(Sb, 2))
	else:
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
elif (SB >= 2765.67) and (SB <= 5531.31):
	Sb = SB - (SB * 11/100)
	if (Sb <= 2826.65):
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 2826.66) and (Sb <= 3751.05): 
		Sl = Sb - (Sb * 15/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 3751.06) and (Sb <= 4664.68):
		Sl = Sb - (Sb * 22.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	else:
		Sl = Sb - (Sb * 27.5/100)
		print("Salario liquido = R$", round(Sl, 2))
else:
	Sl = SB - 608.44
	print("Salario liquido = R$", round(Sl, 2))
	
		
		
	
	
-- OUTPUT:
Salario liquido = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:16:06) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB <= 1659.38):
	Sb = SB - (SB * 8/100)
	print("Salario liquido = R$", round(Sb, 2))
elif (SB >= 1659.39) and(SB <= 2765.66):
	Sb = SB - (SB * 9/100)
	if (Sb <= 1903.98):
		print("Salario liquido = R$", round(Sb, 2))
	else:
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
elif (SB >= 2765.67) and (SB <= 5531.31):
	Sb = SB - (SB * 11/100)
	if (Sb <= 2826.65):
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 2826.66) and (Sb <= 3751.05): 
		Sl = Sb - (Sb * 15/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 3751.06) and (Sb <= 4664.68):
		Sl = Sb - (Sb * 22.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	else:
		Sl = Sb - (Sb * 27.5/100)
		print("Salario liquido = R$", round(Sl, 2))
else:
	Sl = SB - 608.44
	print("Salario liquido = R$", round(Sl, 2))
	
		
		
	
	
-- OUTPUT:
Salario liquido = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:16:31) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB <= 1659.38):
	Sb = SB - (SB * 8/100)
	print("Salario liquido = R$", round(Sb, 2))
elif (SB >= 1659.39) and(SB <= 2765.66):
	Sb = SB - (SB * 9/100)
	if (Sb <= 1903.98):
		print("Salario liquido = R$", round(Sb, 2))
	else:
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
elif (SB >= 2765.67) and (SB <= 5531.31):
	Sb = SB - (SB * 11/100)
	if (Sb <= 2826.65):
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 2826.66) and (Sb <= 3751.05): 
		Sl = Sb - (Sb * 15/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 3751.06) and (Sb <= 4664.68):
		Sl = Sb - (Sb * 22.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	else:
		Sl = Sb - (Sb * 27.5/100)
		print("Salario liquido = R$", round(Sl, 2))
else:
	Sl = SB - 608.44
	print("Salario liquido = R$", round(Sl, 2))
	
		
		
	
	
-- OUTPUT:
Salario liquido = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:17:37) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB <= 1659.38):
	Sb = SB - (SB * 8/100)
	print("Salario liquido = R$", round(Sb, 2))
elif (SB >= 1659.39) and(SB <= 2765.66):
	Sb = SB - (SB * 9/100)
	if (Sb <= 1903.98):
		print("Salario liquido = R$", round(Sb, 2))
	else:
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
elif (SB >= 2765.67) and (SB <= 5531.31):
	Sb = SB - (SB * 11/100)
	if (Sb <= 2826.65):
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 2826.66) and (Sb <= 3751.05): 
		Sl = Sb - (Sb * 15/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 3751.06) and (Sb <= 4664.68):
		Sl = Sb - (Sb * 22.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	else:
		Sl = Sb - (Sb * 27.5/100)
		print("Salario liquido = R$", round(Sl, 2))
else:
	Sl = SB - 608.44
	print("Salario liquido = R$", round(Sl, 2))
	
		
		
	
	
-- OUTPUT:
Salario liquido = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:19:48) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB <= 1659.38):
	Sb = SB - (SB * 8/100)
	print("Salario liquido = R$", round(Sb, 2))
elif (SB >= 1659.39) and(SB <= 2765.66):
	Sb = SB - (SB * 9/100)
	if (Sb <= 1903.98):
		print("Salario liquido = R$", round(Sb, 2))
	else:
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
elif (SB >= 2765.67) and (SB <= 5531.31):
	Sb = SB - (SB * 11/100)
	if (Sb <= 2826.65):
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 2826.66) and (Sb <= 3751.05): 
		Sl = Sb - (Sb * 15/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 3751.06) and (Sb <= 4664.68):
		Sl = Sb - (Sb * 22.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	else:
		Sl = Sb - (Sb * 27.5/100)
		print("Salario liquido = R$", round(Sl, 2))
else:
	Sb = SB - 608.44
	Sl = Sb - (Sb * 27.5/100)
	print("Salario liquido = R$", round(Sl, 2))
	
		
		
	
	
-- OUTPUT:
Salario liquido = R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:19:56) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB <= 1659.38):
	Sb = SB - (SB * 8/100)
	print("Salario liquido = R$", round(Sb, 2))
elif (SB >= 1659.39) and(SB <= 2765.66):
	Sb = SB - (SB * 9/100)
	if (Sb <= 1903.98):
		print("Salario liquido = R$", round(Sb, 2))
	else:
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
elif (SB >= 2765.67) and (SB <= 5531.31):
	Sb = SB - (SB * 11/100)
	if (Sb <= 2826.65):
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 2826.66) and (Sb <= 3751.05): 
		Sl = Sb - (Sb * 15/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 3751.06) and (Sb <= 4664.68):
		Sl = Sb - (Sb * 22.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	else:
		Sl = Sb - (Sb * 27.5/100)
		print("Salario liquido = R$", round(Sl, 2))
else:
	Sb = SB - 608.44
	Sl = Sb - (Sb * 27.5/100)
	print("Salario liquido = R$", round(Sl, 2))
	
		
		
	
	
-- EXECUTION TIME:
0.137234
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$ 3571.76
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:34:21) 
-- CODE:
SB = float(input("Salario bruto: "))
# Desconto da contribuicao previdenciaria
if (SB <= 1659.38):
	Sb = SB - (SB * 8/100)    #Salario base eh isento
	print("Salario liquido = R$", round(Sb, 2))
elif (SB >= 1659.39) and(SB <= 2765.66):
	Sb = SB - (SB * 9/100)    # aliquota
	if (Sb <= 1903.98):
		print("Salario liquido = R$", round(Sb, 2))
	else:
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
elif (SB >= 2765.67) and (SB <= 5531.31):
	Sb = SB - (SB * 11/100)
	if (Sb <= 2826.65):
		Sl = Sb - (Sb * 7.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 2826.66) and (Sb <= 3751.05): 
		Sl = Sb - (Sb * 15/100)
		print("Salario liquido = R$", round(Sl, 2))
	elif (Sb >= 3751.06) and (Sb <= 4664.68):
		Sl = Sb - (Sb * 22.5/100)
		print("Salario liquido = R$", round(Sl, 2))
	else:
		Sl = Sb - (Sb * 27.5/100)
		print("Salario liquido = R$", round(Sl, 2))
else:
	Sb = SB - 608.44
	Sl = Sb - (Sb * 27.5/100)
	print("Salario liquido = R$", round(Sl, 2))
	
		
		
	
	
-- EXECUTION TIME:
0.147199
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$ 3571.76
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
